@startuml ej1
skinparam ClassBackgroundColor transparent
skinparam classAttributeIconSize 0 
skinparam ClassBorderThickness 1.3
skinparam ClassBorderColor Black
skinparam ArrowColor Black
skinparam shadowing false

interface DatabaseAccess{
    +insertNewRow(rowData:String[*]): Integer
    +getSearchResults(queryString:String): String[*]
}

class DatabaseRealAccess{
    -database
    +insertNewRow(rowData:String[*]): Integer
    +getSearchResults(queryString:String): String[*]
}
DatabaseAccess <|.. DatabaseRealAccess

class DatabaseProxyAccess{
    -autenticado: boolean
    -password: String
    +isAutenticado(): boolean
    +autenticar(password: String): boolean
    +insertNewRowrow(Data:String[*]): Integer
    +getSearchResults(queryString:String): String[*]
}
DatabaseAccess <|.. DatabaseProxyAccess
DatabaseRealAccess "1" <-r- DatabaseProxyAccess


@enduml